# data-mining-and-analysis

./: CMakeLists.txt  LICENSE  README.md
08-itemset-mining/: CMakeLists.txt
08-itemset-mining/src/: CMakeLists.txt  apriori.cpp  apriori.h  associationrules.cpp  bruteforce.cpp  bruteforce.h  database.cpp  database.h  eclat.cpp  eclat.h  itemsets.cpp  itemsets.h  main.cpp  msweb.cpp  msweb.h  prefixtree.cpp  prefixtree.h  transactiondatabase.cpp  verticaldatabase.cpp
08-itemset-mining/test/: CMakeLists.txt  frequentitemsettest.cpp  frequentitemsettest.h  itemsetstest.cpp  itemsetstest.h  main.cpp  prefixtreetest.h
classification/: CMakeLists.txt  csv.cpp  csv.h  main.cpp  tsv.cpp  tsv.h
clustering-gui/: CMakeLists.txt  kernelkmeansdialog.cpp  kernelkmeansdialog.h  kmeansdialog.cpp  kmeansdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  pointsarea.cpp  pointsarea.h
itemset-mining/: CMakeLists.txt  main.cpp  msweb.cpp  msweb.h
src/: CMakeLists.txt  algorithm.h  apriori.cpp  apriori.h  associationrules.h  bayesclassifier.cpp  bayesclassifier.h  classifier.cpp  classifier.h  clustering.cpp  clustering.h  declat.cpp  declat.h  itemsets.cpp  itemsets.h  kernelfunction.cpp  kernelfunction.h  kernelkmeans.cpp  kernelkmeans.h  kmeans.cpp  kmeans.h  knnclassifier.cpp  knnclassifier.h  main.cpp  msweb.cpp  naivebayesclassifier.cpp  naivebayesclassifier.h  prefixtree.cpp  prefixtree.h  transactiondatabase.cpp  transactiondatabase.h  vectormath.h  vectors.h  verticaldatabase.h
test/: CMakeLists.txt  algorithm.cpp  algorithmtest.cpp  algorithmtest.h  associationrule.cpp  associationrulestest.cpp  associationrulestest.h  bayesclassifier.cpp  bayesclassifiertest.cpp  bayesclassifiertest.h  clustering.cpp  clusteringtest.cpp  clusteringtest.h  frequentitemsets.cpp  frequentitemsettest.cpp  helper.h  itemsets.cpp  itemsetstest.cpp  kernelfunction.cpp  kernelfunctiontest.cpp  kernelfunctiontest.h  kernelkmeans.cpp  kernelkmeanstest.cpp  kernelkmeanstest.h  kmeans.cpp  kmeanstest.cpp  kmeanstest.h  knnclassifier.cpp  knnclassifiertest.cpp  knnclassifiertest.h  naivebayesclassifier.cpp  naivebayesclassifiertest.cpp  naivebayesclassifiertest.h  prefixtree.cpp  prefixtreetest.cpp  vectormathtest.cpp  vectormathtest.h  verticaldatabase.cpp  verticaldatabasetest.cpp  verticaldatabasetest.h
