set(LIBRARYFILES apriori.cpp associationrules.cpp bayesclassifier.cpp bruteforce.cpp classifier.cpp clustering.cpp declat.cpp eclat.cpp itemsets.cpp kernelfunction.cpp kernelkmeans.cpp kmeans.cpp naivebayesclassifier.cpp prefixtree.cpp transactiondatabase.cpp verticaldatabase.cpp)
add_library(datamining ${LIBRARYFILES})
